[package]
name = "mng-tracker"
version = "0.1.0"
authors = ["Matthew Gregg <matt.t.gregg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
conv = "0.3.3"
structopt = "0.3.13"
yahoo_finance_api = {"version" = "1.1.5", features = ["blocking"]} 
