[package]
name = "mng-tracker"
version = "0.1.0"
authors = ["Matthew Gregg <matt.t.gregg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyse = { path = "../analyse" }
async-std = {version = "1", features = ["attributes"]}
async-trait = "0.1.48"
chrono = "0.4"
structopt = "0.3.13"
xactor = "0.7.11"
yahoo_finance_api = "1.1.5" 
text_io = "0.1.8"
tide = "0.16.0"
serde = { version = "1.0.125", features = ["derive"] }
futures = "0.3.13"
